# bert-phonemizer

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: use-python-uv.mdc
src/: dataset.py  infer.py  model.py  prepare_dataset.py  split_dataset.py  train.py  vocab.py
